<resources>
    <string name="app_name">Expolatory Search</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Setting</string>
    <string name="whats_hot">Whats Hot</string>
    <string name="title_home">Search</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Home Fragment-->
    <string name="search_button">GO</string>
    <string name="search_hint">Search…</string>
    <string name="top_result_label">TOP</string>
    <string name="recommend_result_label">Recomendation</string>
    <string name="expolatory_search_label">Expolatory Search</string>
    <string name="expolatory_search_details">The exploratory search is a new way to search the web, not to find what you are searching, but to find what you are not searching, and might be intersting for you ! It allows performing queries in an innovative way and helps you to navigate rich results. As a hub, it proposes redirections to others platforms to make you benefit from your discoveries</string>
    <string name="recommendation_label">Get recommendations on your interests</string>
    <string name="recommendation_details">Want a film recommendation related to actors you like? Want a film recommendation focus to genre you like? Interested by more complex and composite recommendations based on your deepest interests : a actor, a director and a film? Or maybe something simpler ? If you have a thirst for discovery and knowledge, System has answers for you</string>
    <string name="understand_recommend_label">Understand a recommendation</string>
    <string name="understand_details">System gives you recommendations, but also tools to understand why you have these recommendations, because we know that the more important in a recommendation is to know why you get it !</string>
    <string name="created_by">Created by HaiLeader</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="title_activity_whats_hot">WhatsHotActivity</string>
    <string name="input_profile_infomation">Nhập thông tin người dùng!</string>
    <string name="enter_your_name">Nhập tên</string>
    <string name="gender">Giới tính</string>
    <string name="radio_male">Nam</string>
    <string name="radio_female">Nữ</string>
    <string name="my_hobby">Nhập sở thích về âm nhạc</string>
    <string name="favorite_genre">Nhập thể loại nhạc</string>
    <string name="tv_score">Score: </string>
    <string name="tv_rank">Rank: </string>
    <string name="tv_option">⋮</string>
    <string name="menu_option_details">Details</string>
    <string name="menu_option_add_search">Add search</string>
    <string name="menu_option_search_exploratory">Search exploratory</string>
    <string name="label_title">Label:</string>
    <string name="label_artist">Artist:</string>
    <string name="label_producer">Producer:</string>
    <string name="label_genre">Genre:</string>
    <string name="label_release_date">Release Date:</string>
    <string name="label_abstract">Abstract:</string>
    <string name="label_why_be_recommended">Why be recommended?</string>
    <string name="label_search_exploratory">Search exploratory</string>
    <string name="btn_search">Search</string>
    <string name="entity_label_lookup">Entity Label Lookup</string>
    <string name="entity_uri_lookup">Entity URI Lookup</string>
    <string name="inference_rules">Inference rules</string>

</resources>
